--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,4 @@ production:
   <<: *default
   database: ForStudents_production
   username: ForStudents
-  password: <%= ENV['FORSTUDENTS_DATABASE_PASSWORD'] %>
+#  password: <%= ENV['FORSTUDENTS_DATABASE_PASSWORD'] %>
